--- a/SwiftySky/SwiftySky/Base.lproj/Main.storyboard
+++ b/SwiftySky/SwiftySky/Base.lproj/Main.storyboard
@@ -1,25 +1,83 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HFw-FS-IaO">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Movies-->
+        <scene sceneID="GIG-95-azL">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="alD-jx-Ldb" customClass="MoviesViewController" customModule="SwiftySky" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="142" sectionHeaderHeight="28" sectionFooterHeight="28" id="Oqs-xq-1tw">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="142" id="MIH-Fi-3tY" customClass="MovieCell" customModule="SwiftySky" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="142"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MIH-Fi-3tY" id="8eq-6t-tzi">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="141.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCs-62-CM9">
+                                            <rect key="frame" x="106" y="8" width="42" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z5m-47-ozD">
+                                            <rect key="frame" x="8" y="13" width="90" height="125.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="90" id="KXQ-Ft-bDQ"/>
+                                                <constraint firstAttribute="height" priority="999" constant="120" id="oVG-oP-mtI"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="topMargin" secondItem="xCs-62-CM9" secondAttribute="top" id="5yw-iU-zuS"/>
+                                        <constraint firstItem="Z5m-47-ozD" firstAttribute="top" secondItem="8eq-6t-tzi" secondAttribute="topMargin" constant="5" id="9M4-QD-vsZ"/>
+                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="xCs-62-CM9" secondAttribute="bottom" id="CAg-dR-7OQ"/>
+                                        <constraint firstItem="xCs-62-CM9" firstAttribute="leading" secondItem="Z5m-47-ozD" secondAttribute="trailing" constant="8" id="TYm-o6-RXT"/>
+                                        <constraint firstItem="Z5m-47-ozD" firstAttribute="bottom" secondItem="8eq-6t-tzi" secondAttribute="bottomMargin" constant="5" id="ihA-1l-sHl"/>
+                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="xCs-62-CM9" secondAttribute="trailing" constant="5" id="uCa-zA-l9E"/>
+                                        <constraint firstAttribute="leadingMargin" secondItem="Z5m-47-ozD" secondAttribute="leading" id="zqk-UC-pfI"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="thumb" destination="Z5m-47-ozD" id="apy-iR-nku"/>
+                                    <outlet property="titleLbl" destination="xCs-62-CM9" id="Lii-On-XnL"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="alD-jx-Ldb" id="n3X-xV-Q3t"/>
+                            <outlet property="delegate" destination="alD-jx-Ldb" id="V3O-fM-9zT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Movies" id="WFd-RI-PC1"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rap-3Y-zEF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1091" y="388"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Slq-ch-rOl">
+            <objects>
+                <navigationController id="HFw-FS-IaO" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yIe-9D-R23">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="alD-jx-Ldb" kind="relationship" relationship="rootViewController" id="gOB-e3-zBj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5fZ-BB-LAv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="271" y="388"/>
         </scene>
     </scenes>
 </document>
